    and is now "load=False".

  - many-to-one relations now fire off a lazyload in fewer
    cases, including in most cases will not fetch the "old"
    value when a new one is replaced.

  - added "make_transient()" helper function which transforms a
    persistent/ detached instance into a transient one (i.e.
    deletes the instance_key and removes from any session.)
    [ticket:1052]

  - many-to-one "lazyload" fixes:
      - many-to-one relation to a joined-table subclass now
        uses get() for a simple load (known as the "use_get"
        condition), i.e. Related->Sub(Base), without the need
        to redefine the primaryjoin condition in terms of the
        base table. [ticket:1186]
      - specifying a foreign key with a declarative column,
        i.e. ForeignKey(MyRelatedClass.id) doesn't break the
        "use_get" condition from taking place [ticket:1492]

- sql
    - the autoincrement flag on column now indicates the column
      which should be linked to cursor.lastrowid, if that method
      is used.  See the API docs for details.
      
    - returning() support is native to insert(), update(),
      delete(). Implementations of varying levels of
      functionality exist for Postgresql, Firebird, MSSQL and
      Oracle. returning() can be called explicitly with column
      expressions which are then returned in the resultset,
      usually via fetchone() or first().

      insert() constructs will also use RETURNING implicitly to
      get newly generated primary key values, if the database
      version in use supports it (a version number check is
      performed). This occurs if no end-user returning() was
      specified.

    - Databases which rely upon postfetch of "last inserted id"
      to get at a generated sequence value (i.e. MySQL, MS-SQL)
      now work correctly when there is a composite primary key
      where the "autoincrement" column is not the first primary
      key column in the table.
